# recaptcha-bypass

./: .gitignore  README.md  pyproject.toml  test.py  test_demo.py
recaptcha_bypass/: __init__.py  solver.py
