[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recaptcha-bypass-RizkyRauf"
version = "0.1.0"
description = "Solve Google reCAPTCHA via audio challenge. Works with Playwright, CloakBrowser, and Selenium."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "RizkyRauf"}
]
keywords = ["recaptcha", "captcha", "bypass", "solver", "playwright", "selenium", "cloakbrowser", "audio", "speech-recognition"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "pydub>=0.25.1",
    "SpeechRecognition>=3.10.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40.0"]
selenium = ["selenium>=4.15.0"]
cloakbrowser = ["cloakbrowser>=0.3.0"]
all = [
    "playwright>=1.40.0",
    "selenium>=4.15.0",
    "cloakbrowser>=0.3.0",
]

[project.urls]
"Homepage" = "https://github.com/RizkyRauf/recaptcha-bypass"
"Bug Tracker" = "https://github.com/RizkyRauf/recaptcha-bypass/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["recaptcha_bypass*"]

[tool.setuptools.package-dir]
"" = "."
